[package]
name = "binary_options_tools_uni"
version = "0.1.0"
edition = "2021"
authors = ["ChipaDevTeam"]
repository = "https://github.com/ChipaDevTeam/BinaryOptionsTools-v2"
homepage = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
documentation = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
description = "UniFFI bindings for binary-options-tools. Enables multi-language support (Kotlin, Swift, Python) for cross-platform binary options trading automation."
keywords = ["binary-options", "uniffi", "cross-platform", "trading"]
categories = ["api-bindings"]
license-file = "../LICENSE"

[features]
default = ["python", "swift", "go"]
kotlin = []
swift = []
csharp = []
go = []
ruby = []
python = []
javascript = []

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi_bindgen.rs"


[lib]
name = "binary_options_tools_uni"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.31.0", features = ["cli"] }
binary_options_tools = { path = "../crates/binary_options_tools", version = "0.2.0" }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
thiserror = "2.0.18"
rust_decimal = "1.37.2"
futures-util = "0.3.31"
uuid = { version = "1.10.0", features = ["v4", "serde", "fast-rng"] }
regex = "1.12.2"
bo2_macros = { version = "0.1.0", path = "bo2_macros" }

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }
