[package]
name = "BinaryOptionsToolsV2"
version = "0.2.10"
edition = "2021"
authors = ["ChipaDevTeam"]
description = "Python bindings for binary-options-tools. High-performance library for PocketOption trading automation with async/sync support, real-time data streaming, and WebSocket API access."
license-file = "LICENSE"
homepage = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
repository = "https://github.com/ChipaDevTeam/BinaryOptionsTools-v2"
documentation = "https://chipadevteam.github.io/BinaryOptionsTools-v2/python.html"
readme = "Readme.md"
keywords = ["binary-options", "pocketoption", "trading", "python", "pyo3"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "BinaryOptionsToolsV2"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["abi3-py39"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }

binary_options_tools = { path = "../../crates/binary_options_tools", version = "0.2.1" }

thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
uuid = "1.18.0"
tracing = "0.1.41"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
futures-util = "0.3.31"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = "0.4.42"
url = "2.5.7"
regex = "1.12.2"
async-stream = "0.3.6"
async-trait = "0.1.86"
tungstenite = { version = "0.28.0", default-features = false, features = ["rustls-tls-webpki-roots", "handshake"] }
rust_decimal = "1.40.0"
rust_decimal_macros = "1.40.0"
pyo3-stub-gen = { version = "0.7.0", optional = true }

[features]
default = []
stubgen = ["pyo3-stub-gen"]
