[package]
name = "binary-options-tools-core"
version = "0.2.0"
edition = "2021"
authors = ["ChipaDevTeam"]
repository = "https://github.com/ChipaDevTeam/BinaryOptionsTools-v2"
homepage = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
documentation = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
readme = "README.md"
description = "Low-level WebSocket client and protocol handler for binary options trading. Core foundation providing connection management, message routing, and async communication primitives."
keywords = ["binary-options", "websocket", "trading", "async", "tokio"]
categories = ["asynchronous", "network-programming", "api-bindings"]
license-file = "LICENSE"

[dependencies]
async-trait = "0.1.88"
futures-util = "0.3"
kanal = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["rustls-tls-webpki-roots", "connect", "handshake"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
rand = "0.9.2"
